# cpp-tools

./: CMakeLists.txt  README.md
cpp_tools/: CMakeLists.txt  file_manager.cc  file_manager_test.cc  file_name.cc  file_name_test.cc  object_detect.cc  object_detect_test.cc  timer.cc  timer_test.cc
include/: file_manager.h  file_name.h  object_detect.h  timer.h
